--- a/task1.html
+++ b/task1.html
@@ -84,8 +84,7 @@
         </section>
 
         <footer>
-            <hr>
-            <p>&copy; 2024 Sarthak Baluni. All rights reserved.</p>
+            <p>&copy; 2024 Sarthak Baluni</p>
         </footer>
     </div>
 </body>
